# simplejson-c

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build-test.yml
src/headerFiles/simplejson/: _internal.h  dict.h  jsonreader.h  jsonwriter.h  list.h  object.h  str.h  stringbuffer.h
src/sourceFiles/: simplejson__internal.c  simplejson_dict.c  simplejson_jsonreader.c  simplejson_jsonwriter.c  simplejson_list.c  simplejson_object.c  simplejson_str.c  simplejson_stringbuffer.c
tests/: CMakeLists.txt  _internal_test.c  dict_test.c  jsonreader_test.c  jsonwriter_test.c  list_test.c  object_test.c  run_cmocka_tests.c  str_test.c  stringbuffer_test.c
